Update CLI commands to use @einui registry namespace

--- a/components.json
+++ b/components.json
@@ -19,6 +19,6 @@
     "hooks": "@/hooks"
   },
   "registries": {
-    "@ein": "https://ui.eindev.ir/r/{name}.json"
+    "@einui": "https://ui.eindev.ir/r/{name}.json"
   }
 }
